fix(colors): ensure contrasts in .text-* + .bg-* + badge / list-groups / table-rows components by using color-yiq function

--- a/scss/_o-tables.scss
+++ b/scss/_o-tables.scss
@@ -42,6 +42,10 @@
     }
   }
 
+  [scope="row"][rowspan] {
+    vertical-align: top;
+  }
+
   [class^="icon-"],
   [class*=" icon-"] {
     font-size: $o-table-icon-size;
