--- a/scss/mixins/_badge.scss
+++ b/scss/mixins/_badge.scss
@@ -1,11 +1,20 @@
 @mixin badge-variant($bg) {
-  color: color-yiq($bg);
+  // Boosted mod: ensure contrast
+  $contrast: color-yiq($bg);
+  color: $contrast;
+  // end mod
   background-color: $bg;
 
   @at-root a#{&} {
     @include hover-focus() {
-      color: color-yiq($bg);
-      background-color: darken($bg, 10%);
+      // Boosted mod: ensure contrast
+      color: $contrast;
+      @if $contrast == $white {
+        background-color: darken($bg, 10%);
+      } @else {
+        background-color: lighten($bg, 10%);
+      }
+      // end mod
     }
 
     &:focus,
